# aws-key-rotator

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: dev.yml  release.yml  rust.yml
src/: main.rs
src/aws/: config.rs  connection.rs  key_rotator.rs  mod.rs
