[package]
name = "aws-key-rotator"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
tokio-compat-02 = "0.1"
rust-ini = "0.16"
dirs = "3.0"
rusoto_iam = "0.45"
rusoto_core = "0.45"
rusoto_sts = "0.45"
thiserror = "1.0"
Inflector = "0.11"
anyhow = "1.0"
